Adds gitpod configuration, tweaks example docs, adjusts nav handling to read in nav from sub-site.

--- a/example-docs/mkdocs.yml
+++ b/example-docs/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: My Docs
+site_name: Example Docs
 plugins:
   - unity:
       sites:
@@ -7,5 +7,12 @@ plugins:
           path: subsite-b
       - subsite-c:
           mountpoint: mounted-at-c
-  - awesome-pages:
-      filename: .nav
+  #- awesome-pages:
+  #    filename: .nav
+  - search
+
+nav:
+  - "Start Here (root)": "index.md"
+  - "Nesting":
+    - "subsite-b/index.md"
+    - "subsite-c/subsection-1/page.md"
